--- a/templates/nav.html
+++ b/templates/nav.html
@@ -102,7 +102,8 @@
         padding: 0;
     }
     .main-link.stic{
-        justify-content: end;
+        margin-left: 10%;
+        justify-content: center;
     }
     
     .main-nav > ul > li {
