--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.6);
         transition: transform 0.3s ease;
         margin: 4px;
+        object-fit: cover;
     }
     .dia-img{
     height: 150px;
@@ -62,19 +63,28 @@
      .view-more-btn:hover{
         color: #f00;
      }
-
+        
+     #centerImg{
+        display: none;
+     }
      @media screen and (max-width: 768px){
         .page1{
+            display: flex;
             flex-direction: column;
+           justify-content: center;
+           align-content: center;
+            
         }
         .page1 .left{
-            width: 100%;
+            width: 90%;
             padding: 0;
+            margin: -30px auto 0 20px;
         }
         .page1 .right{
             width: 100%;
             order: -1;
             padding: 0;
+            margin: 20px auto 0 70px;
         }
         .gridDiv1{
             display: flex;
@@ -90,6 +100,15 @@
         }
         #gridImg2{margin-left: 0;}
         #gridImg4{margin-left: -50px;}
+        #centerImg{
+            /* all:unset; */
+            box-shadow:none;
+            position: absolute;
+            background: transparent;
+            display: block;
+            top: 190px;
+            left: 170px;
+         }
          /* .page1 .right .grid{
             flex-direction: column;
         } */
