--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
         background-size: cover;
         position: relative;
     }
+    body,main{
+        overflow-x: hidden;
+    }
     .page1{
         width: 100%;
         display: flex;
@@ -193,7 +196,22 @@
 	 width: 20px;
 	 height: 20px;
 }
+/* .page4{
+    background-color: #fff;
+} */
+.image-mapper-shape {
+    fill: rgba(0, 0, 0, 0);
+}
+g:hover .image-mapper-shape {
+    stroke: #22316c;
+    stroke-width: 15px;
+    opacity: 15%;
+    
+}
  
+.page5{
+    height: 100vh;
+}
      @media screen and (max-width: 768px){
         body{
             overflow-x: hidden;
@@ -273,7 +291,11 @@
                 width: 15px;
                 height: 15px;
             }
-        }
-          
+            /* .page4 img{
+                width:100%;
+            }
+          #gvpmap{
+            display: none;
+          } */
 
     }
