Update image formats and improve navigation links in various templates

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -61,7 +61,7 @@
     <body>
         <div class="footer">
             <div class="logo-container">
-                <img src="https://www.gvpcdpgc.edu.in/gvplogo.jpg" alt="College Logo">
+                <img src="../assects/gvplogorm.png" alt="College Logo">
                 <p>Gayatri Vidya Parishad College <br>for Degree and PG Courses (Autonomous),<br>Rushikonda, Visakhapatnam - 530045, Andhra Pradesh</p>
             </div>
             <div>
