--- a/templates/nav.html
+++ b/templates/nav.html
@@ -346,6 +346,7 @@
             </div>
             <div class="overlay-content">
                 <a href="../index.html" class="singleLink">Home</a>
+                <a href="../about.html" class="singleLink">About</a>
                <div class="dropdown">
                  <button class="dropbtn">Administration
                    <i class="fa fa-caret-down"></i>
@@ -484,7 +485,7 @@
         <ul class="main-link">
             
             <li><a href="../index.html"><span class="material-symbols-outlined">home</span></a></li>
-            <li><a href="./404">About</a></li>
+            <li><a href="../about.html">About</a></li>
             <li><a href="../Adminstration/administration.html">Administration <span class="material-symbols-outlined">keyboard_arrow_down</span></a>
                 <ul>
                     <li><a href="../Adminstration/administration.html">Administrators</a></li>
