Remove unused administration.css and trash.html files; add scroll-to-top button functionality in administration.html

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -347,23 +347,7 @@
             <div class="overlay-content">
                 <a href="../index.html" class="singleLink">Home</a>
                 <a href="../about.html" class="singleLink">About</a>
-               <div class="dropdown">
-                 <button class="dropbtn">Administration
-                   <i class="fa fa-caret-down"></i>
-                 </button>
-                 <div class="dropdown-content">
-                                       <a href="../Adminstration/administration.html">Administrators</a>
-                     <a href="../Adminstration/administration.html#director">Directors</a>
-                     <a href="../Adminstration/administration.html#deans">Deans</a>
-                     <a href="../Adminstration/administration.html#controllers">Controllers</a>
-                     <a href="../Adminstration/administration.html#hod-pg">PG HOD's</a>
-                     <a href="../Adminstration/administration.html#hod-ET">E&T HOD's</a>
-                     <a href="../Adminstration/administration.html#hod-ug">UG HOD's</a>
-                     <a href="../Adminstration/administration.html#COORDINATORS">Coordinators</a>
-                     <a href="../Adminstration/administration.html">Governing bodies</a>
-                 </div>
-               </div> 
-   
+                <a href="../Adminstration/adminMbl.html" class="singleLink">Administration</a>   
                <div class="dropdown">
                  <button class="dropbtn">Academics
                    <i class="fa fa-caret-down"></i>
