Update faculty links to point to the new faculty directory page

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -376,7 +376,7 @@
                </div> 
    
    
-               <a href="../faculty/faculty.html" class="singleLink">Faculty</a>
+               <a href="../faculty/facultyDirectory.html" class="singleLink">Faculty</a>
                <div class="dropdown">
                  <button class="dropbtn">Placements
                    <i class="fa fa-caret-down"></i>
@@ -500,7 +500,7 @@
                     <li><a href="../Academics/pg.html">International</a></li>
                 </ul>
             </li>
-            <li><a href="../faculty/faculty.html">Faculty</a>
+            <li><a href="../faculty/facultyDirectory.html">Faculty</a>
             </li>
             <li><a href="../placements/">Placements<span class="material-symbols-outlined">keyboard_arrow_down</span></a>
                 <ul>
