Add back button to faculty page and update admissions links for consistency

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -368,7 +368,7 @@
                    <i class="fa fa-caret-down"></i>
                  </button>
                  <div class="dropdown-content">
-                   <a href="../admissions/">Admissions</a>
+                   <a href="../admissions/admissions.html">Admissions</a>
                      <a href="../Academics/engeenering.html">Undergraduate</a>
                      <a href="../Academics/undergraduate.html">Graduate</a>
                      <a href="../Academics/pg.html">International</a>
@@ -493,11 +493,11 @@
                     <li><a href="../Academics/Archives.html">Archives</a></li>
                 </ul>
             </li>
-            <li><a href="../admissions/">Admissions<span class="material-symbols-outlined">keyboard_arrow_down</span></a>
+            <li><a href="../admissions/admissions.html">Admissions<span class="material-symbols-outlined">keyboard_arrow_down</span></a>
                 <ul>
-                    <li><a href="../Academics/engeenering.html">Undergraduate</a></li>
-                    <li><a href="../Academics/undergraduate.html">Graduate</a></li>
-                    <li><a href="../Academics/pg.html">International</a></li>
+                    <li><a href="../admissions/admissions.html?admission=sub1" onclick="toggleVisibility('button1', 'sub1');">Undergraduate</a></li>
+                    <li><a href="../admissions/admissions.html?admission=sub2" onclick="toggleVisibility('button2', 'sub2');">Postgraduate Programmes</a></li>
+                    <li><a href="../admissions/admissions.html?admission=sub3" onclick="toggleVisibility('button2', 'sub2');">Engineering Programmes</a></li>
                 </ul>
             </li>
             <li><a href="../faculty/facultyDirectory.html">Faculty</a>
