--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
               header {
         background-image: url("./assects/home.png");
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: bottom;
         background-clip: content-box;
         background-size: cover;
         position: relative;
